Fixing extra space below form tag issue

--- a/Project14_calculator/style.css
+++ b/Project14_calculator/style.css
@@ -22,6 +22,7 @@ body {
     height: 30%;
     width: 100%;
     box-sizing: border-box;
+    margin-bottom: 0;
 }
 
 .inputText textarea{
